tests/errors/invalid-struct-field.ink
// @test error

struct Foo
{
	int x;
}

fn main() : int
{
	Foo f;
	return f.y;
}